--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 html {
     font-size: 16px;
-    font-family: "Arial", sans-serif;
+    font-family: Helvetica, sans-serif;
 }
 
  /* Header */
@@ -11,8 +11,12 @@ html {
 
   /* Body */
 
+  h2 {
+      font-size: 26px;
+  }
+
   .brushes h2 {
-      background-color: rgb(0, 255, 128);
+      background-color: MediumSpringGreen;
       color: white;
   }
 
@@ -24,4 +28,9 @@ html {
   .paint h2 {
       background-color: rgb(132, 179, 255);
       color: white;
+  }
+
+  span {
+      color: blue;
+      font-weight: bold;
   }
