--- a/style.css
+++ b/style.css
@@ -7,12 +7,20 @@ html {
 
  /* Header */
 
-
+h1 {
+    font-size: 100px;
+    text-align: center;
+    color: khaki;
+}
 
   /* Body */
 
   h2 {
       font-size: 26px;
+  }
+
+  h3 {
+      font-size: 1.17em;
   }
 
   .brushes h2 {
